plugins {
	id 'org.springframework.boot' version '3.0.2'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'java'
}

group = 'at.v3rtumnus'
sourceCompatibility = '17'

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	implementation 'org.mariadb.jdbc:mariadb-java-client'

	implementation 'org.liquibase:liquibase-core:4.20.0'

	implementation('com.github.v3rtumnus:yahoofinance-api:develop-SNAPSHOT')
	implementation 'org.apache.pdfbox:pdfbox:3.0.0-RC1'

	compileOnly 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

bootJar {
    launchScript()

    baseName "plan-man"
}
